librocksdb-sys/src/lib.rs


    pub fn rocksdb_options_set_memtable_prefix_bloom_bits(opt: *mut rocksdb_options_t,
                                                          v: uint32_t);

    pub fn rocksdb_options_set_memtable_prefix_bloom_probes(opt: *mut rocksdb_options_t,
                                                            v: uint32_t);

    pub fn rocksdb_options_set_memtable_huge_page_size(opt: *mut rocksdb_options_t, v: size_t);

    pub fn rocksdb_options_set_max_successive_merges(opt: *mut rocksdb_options_t, v: size_t);

    pub fn rocksdb_options_set_min_partial_merge_operands(opt: *mut rocksdb_options_t,
                                                          v: uint32_t);

    pub fn rocksdb_options_set_bloom_locality(opt: *mut rocksdb_options_t, v: uint32_t);

    pub fn rocksdb_options_set_inplace_update_support(opt: *mut rocksdb_options_t, v: c_uchar);

    pub fn rocksdb_options_set_inplace_update_num_locks(opt: *mut rocksdb_options_t, v: size_t);

    pub fn rocksdb_options_set_report_bg_io_stats(opt: *mut rocksdb_options_t, v: c_int);

    pub fn rocksdb_options_set_wal_recovery_mode(opt: *mut rocksdb_options_t, v: c_int);

    pub fn rocksdb_options_set_compression(opt: *mut rocksdb_options_t, t: c_int);

    pub fn rocksdb_options_set_compaction_style(opt: *mut rocksdb_options_t, style: c_int);

    pub fn rocksdb_options_set_universal_compaction_options(opt: *mut rocksdb_options_t, uco: *mut rocksdb_universal_compaction_options_t);

    pub fn rocksdb_options_set_fifo_compaction_options(opt: *mut rocksdb_options_t,
                                                       fifo: *mut rocksdb_fifo_compaction_options_t);

    // Compaction filter

    pub fn rocksdb_compactionfilter_create
        (state: *mut c_void,
         destructor: Option<unsafe extern "C" fn(state: *mut c_void)>,
         filter: Option<unsafe extern "C" fn(state: *mut c_void,
                                             level: c_int,
                                             key: *const c_char,
                                             key_length: size_t,
                                             existing_value: *const c_char,
                                             value_length: size_t,
                                             new_value: *mut *mut c_char,
                                             new_value_length: *mut size_t,
                                             value_changed: *mut c_uchar)
                                             -> c_uchar>,
         name: Option<unsafe extern "C" fn(state: *mut c_void) -> *const c_char>)
         -> *mut rocksdb_compactionfilter_t;

    pub fn rocksdb_compactionfilter_set_ignore_snapshots(filter: *mut rocksdb_compactionfilter_t,
                                                         v: c_uchar);

    pub fn rocksdb_compactionfilter_destroy(filter: *mut rocksdb_compactionfilter_t);

    // Compaction Filter context

    pub fn rocksdb_compactionfiltercontext_is_full_compaction(context: *mut rocksdb_compactionfiltercontext_t) -> c_uchar;

    pub fn rocksdb_compactionfiltercontext_is_manual_compaction(context: *mut rocksdb_compactionfiltercontext_t) -> c_uchar;

    // Compaction Filter factory

    pub fn rocksdb_compactionfilterfactory_create(state: *mut c_void, destructor: Option<unsafe extern "C" fn(state: *mut c_void)>, create_compaction_filter: Option<unsafe extern "C" fn(state: *mut c_void, context: *mut rocksdb_compactionfiltercontext_t) -> *mut rocksdb_compactionfilter_t>, name: Option<unsafe extern "C" fn(state: *mut c_void) -> *const c_char>) -> *mut rocksdb_compactionfilterfactory_t;

    pub fn rocksdb_compactionfilterfactory_destroy(factory: *mut rocksdb_compactionfilterfactory_t);

    // Comparator

    pub fn rocksdb_comparator_create(state: *mut c_void,
                                     destructor: Option<unsafe extern "C" fn(state: *mut c_void)>,
                                     compare: Option<unsafe extern "C" fn(state: *mut c_void,
                                                                          a: *const c_char,
                                                                          alen: size_t,
                                                                          b: *const c_char,
                                                                          blen: size_t)
                                                                          -> c_int>,
                                     name: Option<unsafe extern "C" fn(state: *mut c_void)
                                                                       -> *const c_char>)
                                     -> *mut rocksdb_comparator_t;

    pub fn rocksdb_comparator_destroy(cmp: *mut rocksdb_comparator_t);

    // Filter policy

    pub fn rocksdb_filterpolicy_create(state: *mut c_void, destructor: Option<unsafe extern "C" fn(state: *mut c_void)>, create_filter: Option<unsafe extern "C" fn(state: *mut c_void, key_array: *const *const c_char, key_length_array: *const size_t, num_keys: c_int, filter_length: *mut size_t) -> *mut c_char>, key_may_match: Option<unsafe extern "C" fn(state: *mut c_void, key: *const c_char, length: size_t, filter: *const c_char, filter_length: size_t) -> c_uchar>, delete_filter: Option<unsafe extern "C" fn(state: *mut c_void, filter: *const c_char, filter_length: size_t)>, name: Option<unsafe extern "C" fn(state: *mut c_void) -> *const c_char>) -> *mut rocksdb_filterpolicy_t;

    pub fn rocksdb_filterpolicy_destroy(filter: *mut rocksdb_filterpolicy_t);

    pub fn rocksdb_filterpolicy_create_bloom(bits_per_key: c_int) -> *mut rocksdb_filterpolicy_t;

    pub fn rocksdb_filterpolicy_create_bloom_full(bits_per_key: c_int) -> *mut rocksdb_filterpolicy_t;

    // Merge Operator

    pub fn rocksdb_mergeoperator_create(state: *mut c_void, destructor: Option<unsafe extern "C" fn(state: *mut c_void)>, full_merge: Option<unsafe extern "C" fn(state: *mut c_void, key: *const c_char, key_length: size_t, existing_value: *const c_char, existing_value_length: size_t, operands_list: *const *const c_char, operands_list_length: *const size_t, num_operands: c_int, success: *mut c_uchar, new_value_length: *mut size_t) -> *mut c_char>, partial_merge: Option<unsafe extern "C" fn(state: *mut c_void, key: *const c_char, key_length: size_t, operands_list: *const *const c_char, operands_list_length: *const size_t, num_operands: c_int, success: *mut c_uchar, new_value_length: *mut size_t) -> *mut c_char>, delete_value: Option<unsafe extern "C" fn(state: *mut c_void, value: *const c_char, value_length: size_t)>, name: Option<unsafe extern "C" fn(state: *mut c_void) -> *const c_char>) -> *mut rocksdb_mergeoperator_t;

    pub fn rocksdb_mergeoperator_destroy(merge_operator: *mut rocksdb_mergeoperator_t);

    // Read options

    pub fn rocksdb_readoptions_create() -> *mut rocksdb_readoptions_t;

    pub fn rocksdb_readoptions_destroy(opt: *mut rocksdb_readoptions_t);

    pub fn rocksdb_readoptions_set_verify_checksums(opt: *mut rocksdb_readoptions_t, v: c_uchar);

    pub fn rocksdb_readoptions_set_fill_cache(opt: *mut rocksdb_readoptions_t, v: c_uchar);

    pub fn rocksdb_readoptions_set_snapshot(opt: *mut rocksdb_readoptions_t,
                                            v: *const rocksdb_snapshot_t);

    pub fn rocksdb_readoptions_set_iterate_upper_bound(opt: *mut rocksdb_readoptions_t,
                                                       key: *const c_char,
                                                       keylen: size_t);

    pub fn rocksdb_readoptions_set_read_tier(opt: *mut rocksdb_readoptions_t, v: c_int);

    pub fn rocksdb_readoptions_set_tailing(opt: *mut rocksdb_readoptions_t, v: c_uchar);

    pub fn rocksdb_readoptions_set_readahead_size(opt: *mut rocksdb_readoptions_t, v: size_t);

    // Write options

    pub fn rocksdb_writeoptions_create() -> *mut rocksdb_writeoptions_t;

    pub fn rocksdb_writeoptions_destroy(opt: *mut rocksdb_writeoptions_t);

    pub fn rocksdb_writeoptions_set_sync(opt: *mut rocksdb_writeoptions_t, v: c_uchar);

    pub fn rocksdb_writeoptions_disable_WAL(opt: *mut rocksdb_writeoptions_t, disable: c_int);

    // Flush options

    pub fn rocksdb_flushoptions_create() -> *mut rocksdb_flushoptions_t;

    pub fn rocksdb_flushoptions_destroy(opt: *mut rocksdb_flushoptions_t);

    pub fn rocksdb_flushoptions_set_wait(opt: *mut rocksdb_flushoptions_t, v: c_uchar);

    // Cache

    pub fn rocksdb_cache_create_lru(capacity: size_t) -> *mut rocksdb_cache_t;

    pub fn rocksdb_cache_destroy(cache: *mut rocksdb_cache_t);

    pub fn rocksdb_cache_set_capacity(cache: *mut rocksdb_cache_t, capacity: size_t);

    // Environment

    pub fn rocksdb_create_default_env() -> *mut rocksdb_env_t;

    pub fn rocksdb_create_mem_env() -> *mut rocksdb_env_t;

    pub fn rocksdb_env_set_background_threads(env: *mut rocksdb_env_t, n: c_int);

    pub fn rocksdb_env_set_high_priority_background_threads(env: *mut rocksdb_env_t, n: c_int);

    pub fn rocksdb_env_join_all_threads(env: *mut rocksdb_env_t);

    pub fn rocksdb_env_destroy(env: *mut rocksdb_env_t);

    // Slice Transform

    pub fn rocksdb_slicetransform_create(state: *mut c_void, destructor: Option<unsafe extern "C" fn(state: *mut c_void)>, transform: Option<unsafe extern "C" fn(state: *mut c_void, key: *const c_char, length: size_t, dst_length: *mut size_t) -> *mut c_char>, in_domain: Option<unsafe extern "C" fn(state: *mut c_void, key: *const c_char, length: size_t) -> c_uchar>, in_range: Option<unsafe extern "C" fn(state: *mut c_void, key: *const c_char, length: size_t) -> c_uchar>, name: Option<unsafe extern "C" fn(state: *mut c_void) -> *const c_char>) -> *mut rocksdb_slicetransform_t;

    pub fn rocksdb_slicetransform_create_fixed_prefix(len: size_t) -> *mut rocksdb_slicetransform_t;

    pub fn rocksdb_slicetransform_create_noop() -> *mut rocksdb_slicetransform_t;

    pub fn rocksdb_slicetransform_destroy(st: *mut rocksdb_slicetransform_t);

    // Universal Compaction options

    pub fn rocksdb_universal_compaction_options_create
        ()
        -> *mut rocksdb_universal_compaction_options_t;

    pub fn rocksdb_universal_compaction_options_set_size_ratio(uco: *mut rocksdb_universal_compaction_options_t, ratio: c_int);

    pub fn rocksdb_universal_compaction_options_set_min_merge_width(uco: *mut rocksdb_universal_compaction_options_t, w: c_int);

    pub fn rocksdb_universal_compaction_options_set_max_merge_width(uco: *mut rocksdb_universal_compaction_options_t, w: c_int);

    pub fn rocksdb_universal_compaction_options_set_max_size_amplification_percent
        (uco: *mut rocksdb_universal_compaction_options_t,
         p: c_int);

    pub fn rocksdb_universal_compaction_options_set_compression_size_percent
        (uco: *mut rocksdb_universal_compaction_options_t,
         p: c_int);

    pub fn rocksdb_universal_compaction_options_set_stop_style(uco: *mut rocksdb_universal_compaction_options_t, style: c_int);

    pub fn rocksdb_universal_compaction_options_destroy(uco: *mut rocksdb_universal_compaction_options_t);

    pub fn rocksdb_fifo_compaction_options_create() -> *mut rocksdb_fifo_compaction_options_t;

    pub fn rocksdb_fifo_compaction_options_set_max_table_files_size(fifo_opts: *mut rocksdb_fifo_compaction_options_t, size: uint64_t);

    pub fn rocksdb_fifo_compaction_options_destroy(fifo_opts: *mut rocksdb_fifo_compaction_options_t);

    pub fn rocksdb_livefiles_count(files: *const rocksdb_livefiles_t) -> c_int;

    pub fn rocksdb_livefiles_name(files: *const rocksdb_livefiles_t,
                                  index: c_int)
                                  -> *const c_char;

    pub fn rocksdb_livefiles_level(files: *const rocksdb_livefiles_t, index: c_int) -> c_int;

    pub fn rocksdb_livefiles_size(files: *const rocksdb_livefiles_t, index: c_int) -> size_t;
